@@ -1,3 +1,6 @@
+Sep 17, 2020
+  loader: added loading of NCI ids (esp. species specific NCI ids) to RDO ontology
+
 Jul 09, 2020
   parser: updated to handle newest data from Cellosaurus
 
